--- a/greencube-io117-statistics-dxcc-t.html
+++ b/greencube-io117-statistics-dxcc-t.html
@@ -165,7 +165,7 @@
       </h2>
 
       <div class="observer-buttons">
-          <button onclick="window.open('https://dxer.site/greencube-io117-statistics-dxcc.html', '_self')">DXCC</button>
+          <button onclick="window.open('https://dxer.site/greencube-observer.html', '_self')">Map</button>
           <button onclick="window.open('https://dxer.site/greencube-io117-statistics-grids.html', '_self')">Grids</button>
           <button onclick="window.open('https://dxer.site/greencube-io117-statistics-stations.html', '_self')">Stations</button>
           <button onclick="window.open('https://dxer.site/greencube-leaderboard.html', '_self')">Data</button>
@@ -174,7 +174,7 @@
 
     <!-- Title for the charts -->
     <div class="chart-title-main">
-        IO-117 GreenCube Statistics: DXCC (updated dynamically)
+        IO-117 GreenCube Statistics: DXCC
     </div>
 
     <!-- Responsive charts -->
