--- a/greencube-io117-statistics-dxcc-t.html
+++ b/greencube-io117-statistics-dxcc-t.html
@@ -314,6 +314,8 @@
             });
           });
     </script>
-
+    <!-- Ko-Fi -->
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+    <script src="kofi.js"></script>
 </body>
 </html>
