--- a/greencube-io117-statistics-grids-t.html
+++ b/greencube-io117-statistics-grids-t.html
@@ -166,7 +166,7 @@
 
     <div class="observer-buttons">
       <button onclick="window.open('https://dxer.site/greencube-observer.html', '_self')">Map</button>
-      <button onclick="window.open('https://dxer.site/greencube-io117-statistics-grids.html', '_self')">Grids</button>
+      <button onclick="window.open('https://dxer.site/greencube-io117-statistics-dxcc.html', '_self')">DXCC</button>
       <button onclick="window.open('https://dxer.site/greencube-io117-statistics-stations.html', '_self')">Stations</button>
       <button onclick="window.open('https://dxer.site/greencube-leaderboard.html', '_self')">Data</button>
     </div>
