--- a/greencube-io117-statistics-stations-t.html
+++ b/greencube-io117-statistics-stations-t.html
@@ -137,13 +137,13 @@
     </h2>
     <div class="observer-buttons">
       <button onclick="window.open('https://dxer.site/greencube-observer', '_self')">Map</button>
+      <button onclick="window.open('https://dxer.site/greencube-io117-statistics-dxcc.html', '_self')">DXCC</button>
       <button onclick="window.open('https://dxer.site/greencube-io117-statistics-grids.html', '_self')">Grids</button>
-      <button onclick="window.open('https://dxer.site/greencube-io117-statistics-stations.html', '_self')">Stations</button>
       <button onclick="window.open('https://dxer.site/greencube-leaderboard.html', '_self')">Data</button>
     </div>
   </div>
 
-  <div class="chart-title-main">IO-117 GreenCube Statistics: Stations (updated dynamically)</div>
+  <div class="chart-title-main">IO-117 GreenCube Statistics: Stations</div>
 
   <!-- Charts -->
   <div class="chart-container">
